k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-hello
  namespace: default
  labels:
    app: fastapi-hello
spec:
  type: NodePort
  selector:
    app: fastapi-hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
